Fixed responsive borders and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -133,14 +133,11 @@ body {
   color: white;
   line-height: 1.5em;
   background-color: inherit;
-  height: 300px;
+ 
   display: flex;
-  width: 30%;
   justify-content: center;
   align-items: center;
-  font-size: 1em;
-  border-bottom: 1px solid white;
-  
+  font-size: 1em;  
 }
 
 p span {
@@ -162,7 +159,7 @@ header {
 }
 
 main {
-    border-bottom: white 3px solid;
+    border-bottom: white 1px solid;
     color: white;
     line-height: 3 em;
 }
@@ -262,7 +259,13 @@ footer {
       border-bottom: none;
     }
 
-    #div-2 p {
+   .div-1, .div-2, .div-3 {
+
+   height: 300px;
+    width: 30%;
+}
+
+    .div-2 p {
       border-left: 1px solid whitesmoke;
       border-right: 1px solid white;
       padding: 0 40px;
